Adding NSHipster 2nd Ed

--- a/assets/sass/screen.sass
+++ b/assets/sass/screen.sass
@@ -675,6 +675,26 @@ a:hover
 
     &:hover
       text-decoration: none !important
+      
+  &.home
+    margin-top: -15px
+    padding: 35px 44px
+    background: #eeeeee
+    border-radius: 20px
+  
+    p
+      font-size: 1em
+      
+    small
+      display: block
+      font-size: 1.2em
+      font-weight: 700
+      margin-left: 5px
+      color: #777
+      text-transform: lowercase
+      font-family: $sans-serif-font-family
+      font-variant: small-caps
+
 
 @media print
   body
