Optimizing fonts for sans-serif Chinese text

--- a/assets/sass/screen.sass
+++ b/assets/sass/screen.sass
@@ -31,8 +31,9 @@ $monospace-font-family: Courier, Monaco, monospace
 @import "./swiftype"
 @import "./exceptions"
 
+
 html, body
-  font-family: $serif-font-family
+  font-family: BodyFontFamily, "Georgia Pro", Georgia, Times
   margin: 0
   border-top: 3px $primary-color solid
   background: $background-color
