--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -1,3 +1,23 @@
+// Declaring BodyFontFamily will let us use a serif face for English content and a 
+// sans-serif face for Chinese content, based on the Unicode ranges:
+// 
+// Block                                   Range       Comment
+// CJK Unified Ideographs                  4E00-9FFF   Common
+// CJK Unified Ideographs Extension A      3400-4DFF   Rare
+// CJK Unified Ideographs Extension B      20000-2A6DF Rare, historic
+// CJK Compatibility Ideographs            F900-FAFF   Duplicates, unifiable variants, corporate characters
+// CJK Compatibility Ideographs Supplement 2F800-2FA1F Unifiable variants
+
+@font-face
+  font-family: BodyFontFamily
+  src: local("Georgia Pro"), local(Georgia), local(serif)
+
+@font-face
+  font-family: BodyFontFamily
+  src: local("Helvetica Neue"), local(Helvetica), local(sans-serif)
+  unicode-range: U+4E00-9FFF, U+3400-4DFF, U+20000-2A6DF, U+F900-FAFF, U+2F800-2FA1F
+
+
 @font-face
   font-family: 'nshipster'
   src: url('/fonts/nshipster.eot?chu8de')
