--- a/assets/sass/screen.sass
+++ b/assets/sass/screen.sass
@@ -476,8 +476,10 @@ pre
 
 #contributors
   .author
-    +span-columns(4 of 12)
-    &:nth-of-type(3)
+    +span-columns(3 of 12)
+    &:nth-of-type(5)
+      margin-left: 11.5%
+    &:nth-of-type(4)
       +omega
 
     margin-bottom: 1em
