--- a/assets/sass/screen.sass
+++ b/assets/sass/screen.sass
@@ -181,6 +181,12 @@ html, body
     p
       +multiline-truncate
 
+#merchandise
+  margin-top: -30px
+  
+  h1
+    margin-bottom: 15px
+
 #revisions
   border-top: 1px #ccc solid
   padding: 1em 0 0
