Adding status page and support in NSMutableHipster section

--- a/nshipster.com/_layouts/post.html
+++ b/nshipster.com/_layouts/post.html
@@ -35,10 +35,27 @@ layout: default
   </div>
 
   <footer role="complementary">
-    {% if page.revisions %}
+    {% if page.revisions or page.status %}
     <section id="revisions">
       <small>NSMutableHipster</small>
 
+      <p>
+      Questions? Corrections?  <a href="https://github.com/NSHipster/articles/issues">Issues</a> and <a href="https://github.com/NSHipster/articles/blob/master/{{ page.path | remove_first:'_posts/' }}">revisions via pull request</a> are always welcome — NSHipster is made better by readers like you.
+      </p>
+      
+      <p>
+      {% if page.status.swift and page.status.swift != "t.b.c." and page.status.swift != "n/a" %}
+        {% if page.status.reviewed %}
+            <em>This article uses Swift version {{ page.status.swift }} and was last reviewed on {{ page.status.reviewed }}.</em>
+        {% else %}
+            <em>This article uses Swift version {{ page.status.swift }}.</em>
+        {% endif %}
+      {% else %}
+            {% if page.status.reviewed %}<em>This article was last reviewed on {{ page.status.reviewed }}.</em>{% endif %}
+      {% endif %}
+      Find status information for all articles on the <a href="/status/">status page</a>.
+      </p>
+      
       <dl>
       {% for revision in page.revisions %}
         <dt>{{ revision[0] | ordinalize }}</dt>
