--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -30,6 +30,7 @@
   <link rel="apple-touch-icon" sizes="120x120" href="/touch-icon-iphone-retina.png"/>
   <link rel="apple-touch-icon" sizes="152x152" href="/touch-icon-ipad-retina.png"/>
   <link rel="icon" sizes="16x16 24x24 32x32 48x48 64x64" type="image/vnd.microsoft.icon" href="/favicon.ico"/>
+  <link rel="mask-icon" sizes="any" href="/website_icon.svg" color="black"/>
   <link rel="author" type="text/plain" href="{{ site.url }}/humans.txt"/>
 
   <meta name="twitter:card" content="summary"/>
