Change footer wording.

--- a/nshipster.com/_layouts/post.html
+++ b/nshipster.com/_layouts/post.html
@@ -40,7 +40,7 @@ layout: default
       <small>NSMutableHipster</small>
 
       <p>
-      Questions? Corrections?  <a href="https://github.com/NSHipster/articles/issues">Issues</a> and <a href="https://github.com/NSHipster/articles/blob/master/{{ page.path | remove_first:'_posts/' }}">revisions via pull request</a> are always welcome — NSHipster is made better by readers like you.
+      Questions? Corrections?  <a href="https://github.com/NSHipster/articles/issues">Issues</a> and <a href="https://github.com/NSHipster/articles/blob/master/{{ page.path | remove_first:'_posts/' }}">pull requests</a> are always welcome — NSHipster is made better by readers like you.
       </p>
       
       <p>
