Move image URL to config.

--- a/nshipster.com/_includes/contributor.html
+++ b/nshipster.com/_includes/contributor.html
@@ -2,7 +2,7 @@
   <div class="contributor" itemprop="author" itemscope itemtype="http://data-vocabulary.org/Person">
     <small>Written by</small>
 
-    <img class="avatar" alt="{{ author.name }}" itemprop="image" src="{{ author.image }}" draggable="false"/>
+    <img class="avatar" alt="{{ author.name }}" itemprop="image" src="{{ site.asseturl }}/{{ author.image }}" draggable="false"/>
     <div class="details">
       <span itemprop="name"><a href="{{ author.url }}">{{ author.name }}</a></span>
 
