--- a/nshipster.cn/_layouts/default.html
+++ b/nshipster.cn/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-  {% if page.title == "NSHipster" %}
+  {% if page.title == "NSHipster 中文版" %}
     <title>{{ page.title | strip_html }}</title>
     <meta name="description" content="{{ site.description | strip_html }}"/>
     <link rel="canonical" href="{{ site.url }}"/>
@@ -79,7 +79,7 @@
       </nav>
       {% endif %}
 
-      {% if page.title == "NSHipster" %}
+      {% if page.title == "NSHipster 中文版" %}
         <h2 class="tagline">{{ site.description }}</h2>
       {% endif %}
     </header>
